--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,3 +1,25 @@
+<div class="container my-3 bg-dark rounded shadow-lg">
+    <div class="row justify-content-center p-4 shadow-lg my-3 rounded">
+        <div class="col-8 d-none d-md-block">
+           <address>
+            <ul>
+                <li>The Organic Mall</li>
+                <li>Post Office Box 5476</li>
+                <li>Limbe, Blantyre</li>
+            </ul>
+            <ul>
+                <li>Telephone:+2651865642</li>
+                <li>Mobile:+265994507277</li>
+                <li>E-mail: <a href="theorganicmall@gmail.com">theorganicmall@gmail.com</a></li>
+                <li>Facebook:<a href=""></a></li>
+            </ul>
+           </address>
+        </div>
+        <div class="col-sm-12 col-md-4">
+            <p class="text-center mt-5 fotext">&copy;The Organic Mall&trade; 2024</p>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
