--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -7,7 +7,77 @@
     <title>Store Dashboard</title>
 </head>
 <body>
-    <h1>this will be a dashboard page</h1>
+    <div class="container mt-5">
+        <div class="navbar navbar-dark bg-dark text-light navbar-expand-md rounded">
+            <a href="" class="navbar-brand mx-3 py-3">dashboard</a>
+            <button class="navbar-toggler me-2" data-bs-toggle="collapse" data-bs-target="#myToggler" role="button" aria-hidden="true">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="myToggler" aria-controls="myToggler">
+                <ul class="nav navbar-nav me-4">
+                    <ul class="nav-item">
+                        <a href="#uploadForm" class="nav-link">Add Item To GLossary</a>
+                    </ul>
+                    <ul class="nav-item">
+                        <a href="" class="nav-link">Link B</a>
+                    </ul>
+                    <ul class="nav-item">
+                        <a href="" class="nav-link">Link C</a>
+                    </ul>
+                </ul>
+            </div> 
+        </div>
+        <h1 class="mt-5 text-center text-primary display-5">this will be a dashboard page</h1>
+        <div class="row">
+            <div class="col-2 d-flex align-items-start">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
+                    <li class="list-group-item">And a fifth one</li>
+                  </ul>
+            </div>
+            <div class="col">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia sunt corporis id perspiciatis placeat dolores perferendis, magnam voluptates error vel unde ratione culpa consequuntur exercitationem nostrum modi architecto eveniet aut, molestiae laboriosam impedit, eligendi assumenda nihil! Suscipit aperiam placeat perferendis, earum recusandae cumque qui quae repudiandae nulla aliquam facilis quis blanditiis! Repellendus modi, non sunt commodi porro consequuntur ex magnam qui pariatur dicta animi minima sint excepturi. Omnis labore aliquid iure sequi placeat itaque incidunt, magni in, quaerat, natus numquam consequuntur perferendis quia doloremque culpa. Sint natus eos, modi corporis, voluptates quia alias odit accusamus voluptas tempore totam magnam consequatur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem placeat blanditiis quo soluta voluptatum non animi, magni, ad enim velit iure excepturi ut nemo assumenda laborum distinctio, facere ex ipsam quae tempore aut neque quisquam quia. Quas eum architecto at.</p>
+            </div>
+            <div class="col-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero veritatis nisi veniam similique magnam molestiae commodi exercitationem fugit quasi vel, harum provident unde totam illo molestias facilis? Quidem tempora veritatis voluptas minus. Unde, doloribus. Nesciunt atque doloremque alias hic sed.</div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-8 mb-4" id="uploadForm">
+                <form action="/products/" class="row g-3" method="POST" accept-charset="UTF-8">
+                    <div class="col-md-6">
+                      <label for="item-name" class="form-label">Item Name:</label>
+                      <input type="text" name="item" class="form-control" id="item-name" placeholder="Name">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="item-category" class="form-label">Item Category:</label>
+                      <input type="text" name="category" class="form-control" id="item-category" placeholder="Category">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="item-quantity" class="form-label">Item Quantity:</label>
+                      <input type="text" name="quantity" class="form-control" id="item-quantity" placeholder="Quantity">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="item-price" class="form-label">Item Price:</label>
+                      <input type="text" name="price" class="form-control" id="item-price" placeholder="Price">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="item-image" class="form-label">Item Image:</label>
+                      <input type="text" name="foto" class="form-control" id="foto">
+                    </div>
+                    <div class="col-12">
+                      <button type="submit" class="btn btn-outline-danger"> Upload Data  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
+                        <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+                        <path d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708z"/>
+                      </svg></button>
+                    </div>
+                  </form>
+            </div>
+        </div>
+    </div>
+   
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
